# DozedEnt

./: -  .c8rc.json  .gitignore  .htaccess  .nojekyll  .npmignore  .nycrc.json  AGENTS.MD  API.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_IMPROVEMENTS_FINAL.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ATTACK_ANIMATION_ENHANCEMENT.md  ATTACK_STATE_FIX.md  BUGFIX_PLAYER_MOVEMENT_SHIELD.md  BUGFIX_SUMMARY.md  BUG_ANALYSIS_COMPLETE.md  BUG_ANALYSIS_FINAL_SUMMARY.md  BUG_ANALYSIS_SUMMARY.md  BUG_FIXES_WASM_INPUT_MOVEMENT.md  BUG_REPORT.md  BUG_REPORT_WASM_INPUT_MOVEMENT.md  BUILD_REPORT.json  BUILD_REPORT.md  CHANGES_SUMMARY.md  COLLISION_IMPLEMENTATION_SUMMARY.md  CORE_LOOP_CHECKLIST.md  DEMO_STATUS.md  DEPLOYMENT_BUILD_RULES_UPDATE.md  DEPLOYMENT_WITH_WASM.md  DEPLOY_GITHUB_PAGES.md  ENHANCED_UI_IMPLEMENTATION.md  FIX_COMPLETED.md  GETTING_STARTED.md  GUIDELINES_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MIME_TYPE_FIX.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  MOBILE_FULLSCREEN_LANDSCAPE.md  (+104 more)
public/: .htaccess  BASH_TEST_README.md  CMakeLists.txt  README_REFACTORING.md  WASM_EXPORTS.json  _config.yml  _headers  animations  create-sprite-sheet.html  demo.html  feature-demo.js  game-host.wasm  game.wasm  game_refactored.cpp  index.html  integration-test.js  multiplayer.html  site.js  wasm-build-time.txt  wasm-timestamp.txt
public/coordinators/: GameCoordinator.cpp
public/demos/: GETTING_STARTED.md  QUICKREF.md  QUICK_START.md  README-SKELETON-PHYSICS.md  RELOAD_INSTRUCTIONS.txt  core-loop-mvp.html  enhanced-skeleton-physics.html  interactive-skeleton-physics.html  standalone-skeleton-physics.html  test-skeleton-demo.html  wolf-ai-showcase.html
public/demos/skeleton/: DEBUGGING_SUMMARY.md  DEBUG_GUIDE.md  FIX_SUMMARY.md  interactive-skeleton-physics.html
public/managers/: CombatManager.cpp  CombatManager.h  InputManager.h  PlayerManager.cpp  README.md
public/physics/: FixedPoint.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsTypes.h
public/src/: BUG_FIXES_APPLIED.md  BUG_REPORT.md  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md  camera-effects.js  constants.js  crypto.js  deterministic-game.js  dev-server-setup.md  interactive-player-demo.html  lobby-analytics.js  sound-system.js
public/src/adapters/: SkeletonFactory.js  skeleton-demo.js
public/src/ai/: wolf-ai-enhanced.js
public/src/animation/: enhanced-animation-controller.js
public/src/audio/: audio-integration.js  audio-manager.js  phase-audio-system.js
public/src/bridge/: progression-bridge.js
public/src/css/: accessibility.css  base.css  combat-ui-optimizer.css  combat.css  critical-ui-hierarchy.css  desktop.css  enhanced-visual.css  mobile.css  player.css  reduced-cognitive-load.css  responsive.css  styles.css
public/src/demo/: config.js  debug-tools.js  entities.js  guidelines-data.js  guidelines-showcase.js  integrated-player-example.js  main.js  orientation.js  physics-knockback-demo.js  progression-demo.js  renderer.js  spawn-wolves.js  wasm-api.js
public/src/demos/: core-loop-mvp.html
public/src/effects/: phase-transition-effects.js
public/src/entities/: PhysicsBarrel.cpp  PhysicsBarrel.h
public/src/game/: achievement-integration.js  achievement-manager.js  persistence-manager.js  save-load-integration.js  save-load-manager.js  statistics-manager.js
public/src/gameentity/: wolf-character.js
public/src/images/: player-sprites.txt
public/src/input/: InputStateManager.js  README.md  ThreeButtonInputAdapter.js  controls.js  enhanced-mobile-controls.js  gamepad-manager.js  input-manager.js  mobile-controls.js
public/src/managers/: input-migration-adapter.js  input-validator.js  unified-input-manager.js
public/src/multiplayer/: multiplayer-game-controller.js  multiplayer-main.js  multiplayer-ui-controller.js
public/src/netcode/: ConnectionManager.js  MessageManager.js  NetworkCoordinator.js  PeerManager.js  RoomManager.js  desync-detection.js  enhanced-multiplayer-sync.js  enhanced-room-manager.js  firebase.js  host-authority.js  ipfs.js  lobby-analytics.js  mqtt.js  multiplayer-demo-coordinator.js  multiplayer-phase-manager.js  network-provider-manager.js  nostr.js  phase-sync-network-adapter.js  rollback-netcode.js  rollup.config.wolf.js  room-manager.d.ts  supabase.js  torrent.js
public/src/renderer/: WolfRenderer.js
public/src/rules/: wasm-loading.md
public/src/skeleton/: SkeletonCoordinator.js  SkeletonManager.js  SkeletonUIInitializer.js  TopDownHumanProportions.js  WasmLoaderService.js  demo-init.js  demo-ui-init.js
public/src/storage/: local-progress-store.js
public/src/test/: progression.spec.js
public/src/ui/: ChoiceOverlay.js  HUD.js  README.md  ShopOverlay.js  achievement-ui.js  alert-system.js  choice-system-clarity.js  combat-ui-optimizer.js  comprehensive-accessibility.js  death-feedback-system.js  enhanced-ui-manager.js  input-manager.js  main-menu-controller.js  multiplayer-demo-ui.js  multiplayer-phase-ui.js  orientation-manager.js  persistence-ui.js  phase-overlay-controller.js  roguelike-hud.js  save-load-ui.js  statistics-dashboard.js  threat-awareness-ui.js  tutorial-system.js
public/src/utils/: broadcast-manager.js  cache-buster.js  dead-code-eliminator.js  deterministic-id-generator.js  device-detector.js  environment-config.js  fix-loose-equality.js  game-renderer.js  index.d.ts  index.js  lobby-analytics.js  memory-optimizer.js  mqtt-broker-health.js  peer-latency-manager.js  peer-name-generator.js  room-code-manager.js  room-discovery-manager.js  room-manager.js  strategy.js  test-runner.js  utils.js  wasm-fallback.js  wasm-lazy-loader.js  wasm-manager.js  wasm-rng.js  wasm.js
public/src/wasm/: GameGlobals.cpp  GameGlobals.h  WasmCombatSystem.js  WasmCoreState.js  WasmInitializer.js  WasmPhaseManagers.js  WasmTypes.d.ts  anim_overlay.h  enemies.h  escalate.h  game-host.cpp  game.cpp  game.wasm  game_refactored.cpp  (+2 more)
public/wasm/: README-SKELETON-PHYSICS.md  build-skeleton-physics.sh  game.wasm  skeleton-physics.js  skeleton-physics.wasm
src/: peer.js  (+34 more)
(+1069 files in other folders)
